--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Plack-App-Proxy
 
+0.07    01/05/2009
+        No longer depend on LWP
+
+0.06    01/04/2009
+        Fixed typo in MANIFEST.SKIP
+
 0.05    01/04/2009
         Re-upload with missing changes
 
