--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Plack-App-Proxy
 
+0.08    01/09/2009
+        Fixed memory leaks for perl 5.8.x.
+        Added more tests.
+
 0.07    01/05/2009
         Only use AnyEvent::HTTP for both blocking and non-blocking
         servers
