Checking in changes prior to tagging of version 0.12.  Changelog diff is:
diff --git a/Changes b/Changes
index 8d58c17..6d15efd 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Plack-App-Proxy

+0.12    02/09/2010
+        - Fixed the pod syntax
+        - Had tests pass without Plack::Server::AnyEvent
+
 0.11    02/08/2010
         - INCOMPATIBLE: the config option 'host' is now renamed to 'remote'
         - Made sure the code forward compatible with Plack 1.0

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Plack-App-Proxy
 
+0.12    02/09/2010
+        - Fixed the pod syntax
+        - Had tests pass without Plack::Server::AnyEvent
+
 0.11    02/08/2010
         - INCOMPATIBLE: the config option 'host' is now renamed to 'remote'
         - Made sure the code forward compatible with Plack 1.0
