Checking in changes prior to tagging of version 0.17.
Changelog diff is:

diff --git a/Changes b/Changes
index cc3e475..38d22fb 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy

+0.17    01/19/2010
+        - Bump version to fix some CPAN issues
+
 0.16    01/12/2010
         - Rewrite proxy code to use AnyEvent::HTTP's on_body callback.
           This gets chunked and gzipped responses working.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy
 
+0.17    01/19/2010
+        - Bump version to fix some CPAN issues
+
 0.16    01/12/2010
         - Rewrite proxy code to use AnyEvent::HTTP's on_body callback.
           This gets chunked and gzipped responses working.
