--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Plack-App-Proxy
 
+0.19
+        - Add pluggable backends, since AnyEvent seems to be flaky on
+          some systems. (doy)
+
 0.18    02/17/2010
         - Fixes for RewriteLocation when used on a mounted proxy
           (hiratara, rbuels)
