Checking in changes prior to tagging of version 0.20.
Changelog diff is:

diff --git a/Changes b/Changes
index 41c32c9..80f28ff 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy

+0.20
+        - Fix auto guessing of RewriteLocation.
+
 0.19
         - Add pluggable backends, since AnyEvent seems to be flaky on
           some systems. (doy)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy
 
+0.20
+        - Fix auto guessing of RewriteLocation.
+
 0.19
         - Add pluggable backends, since AnyEvent seems to be flaky on
           some systems. (doy)
