Checking in changes prior to tagging of version 0.21.
Changelog diff is:

diff --git a/Changes b/Changes
index 80f28ff..f472589 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy

+0.21
+        - Bump version to fix some CPAN issues.
+
 0.20
         - Fix auto guessing of RewriteLocation.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy
 
+0.21
+        - Bump version to fix some CPAN issues.
+
 0.20
         - Fix auto guessing of RewriteLocation.
 
