Checking in changes prior to tagging of version 0.22.
Changelog diff is:

diff --git a/Changes b/Changes
index f472589..f612952 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy

+0.22
+        - Filter out Status header since it's forbidden in PSGI spec (miyagawa)
+
 0.21
         - Bump version to fix some CPAN issues.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy
 
+0.22
+        - Filter out Status header since it's forbidden in PSGI spec (miyagawa)
+
 0.21
         - Bump version to fix some CPAN issues.
 
