Checking in changes prior to tagging of version 0.23.
Changelog diff is:

diff --git a/Changes b/Changes
index f612952..af36947 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy

+0.23    11/05/2012
+        - Fix test failures from newer HTTP::Headers
+
 0.22
         - Filter out Status header since it's forbidden in PSGI spec (miyagawa)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy
 
+0.23    11/05/2012
+        - Fix test failures from newer HTTP::Headers
+
 0.22
         - Filter out Status header since it's forbidden in PSGI spec (miyagawa)
 
