Checking in changes prior to tagging of version 0.25.
Changelog diff is:

diff --git a/Changes b/Changes
index 2f63b14..1fda990 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy

+0.25    11/10/2012
+        - Fix problem with META.yml
+
 0.24    11/10/2012
         - Skip CONNECT test on Windows

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy
 
+0.25    11/10/2012
+        - Fix problem with META.yml
+
 0.24    11/10/2012
         - Skip CONNECT test on Windows
 
