Checking in changes prior to tagging of version 0.26.
Changelog diff is:

diff --git a/Changes b/Changes
index 1fda990..0fe3048 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy

+0.26    02/26/2012
+        - Add parent dependency
+
 0.25    11/10/2012
         - Fix problem with META.yml

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy
 
+0.26    02/26/2012
+        - Add parent dependency
+
 0.25    11/10/2012
         - Fix problem with META.yml
 
