Checking in changes prior to tagging of version 0.28.
Changelog diff is:

diff --git a/Changes b/Changes
index 43ba02a..1e328ef 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy

+0.28    08/24/2013
+        - allow passing options to backend (clkao)
+
 0.27    02/26/2013
         - Remove more HTTP::Headers assumptions

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Plack-App-Proxy
 
+0.28    08/24/2013
+        - allow passing options to backend (clkao)
+
 0.27    02/26/2013
         - Remove more HTTP::Headers assumptions
 
