add missing use to fix synopsis

--- a/README
+++ b/README
@@ -3,6 +3,7 @@ NAME
 
 SYNOPSIS
       use Plack::Builder;
+      use Plack::App::Proxy;
 
       # proxy all requests for /static to 127.0.0.1:80
       builder {
